<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.RegisterActivity">

    <data />

    <!--滑动视图-->
    <ScrollView
        android:id="@+id/sc_global"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background_mohu">

        <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"/>

            <LinearLayout
                android:id="@+id/ll_middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <EditText
                    android:id="@+id/et_telephone"
                    style="@style/login_button"

                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/et_phone"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    tools:targetApi="o" />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_getcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/et_otpCode"
                style="@style/login_button"
                android:layout_width="130dp"
                android:textSize="16dp"

                android:layout_marginTop="12dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/et_code"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                tools:targetApi="o" />

            <Button
                android:id="@+id/bt_get_otp"
                style="@style/login_button"
                android:background="@drawable/yuan_jiao_bian_kuang_yellow"
                android:textSize="16dp"
                android:layout_width="90dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/bt_get_code" />
        </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">



                <EditText
                    android:id="@+id/et_username"
                    style="@style/login_button"

                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/et_name"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/et_gender"
                    style="@style/login_button"

                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/et_gender"
                    android:inputType="number"
                    android:maxLength="1"
                    android:singleLine="true"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/et_age"
                    style="@style/login_button"

                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/et_age"
                    android:inputType="number"
                    android:maxLength="3"
                    android:singleLine="true"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/login_button"

                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/et_password"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/et_password2"
                    style="@style/login_button"

                    android:layout_marginTop="12dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/et_password2"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/bt_submit_register"
                    style="@style/login_button"
                    android:layout_height="60dp"
                    android:textSize="26dp"

                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/bt_register" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>